--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-input-mask": "^3.0.2",
     "axios": "^1.3.5",
+    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.0",
     "react-toastify": "^9.1.2",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4",
